frontend/virtual/Include/libadalang.h

/* This type represents a context for all source analysis. This is the first
   type you need to create to use libadalang. It will contain the results of
   all analysis, and is the main holder for all the data.

   You can create several analysis contexts if you need to, which enables you,
   for example to:

   * analyze several different projects at the same time;

   * analyze different parts of the same projects in parallel.

   In the current design, contexts always keep all of their analysis units
   allocated. If you need to get this memory released, the only option at your
   disposal is to destroy your analysis context instance.

   This structure is partially opaque: some fields are exposed to allow direct
   access, for performance concerns.  */
typedef struct
{
   uint64_t serial_number;
} *ada_analysis_context;
/* This type represents the analysis of a single file.

   This type has strong-reference semantics and is ref-counted. Furthermore, a
   reference to a unit contains an implicit reference to the context that owns
   it. This means that keeping a reference to a unit will keep the context and
   all the unit it contains allocated.

   This structure is partially opaque: some fields are exposed to allow direct
   access, for performance concerns.  */
typedef struct
{
   uint64_t version_number;
} *ada_analysis_unit;
/* Data type for all nodes. Nodes are assembled to make up a tree.  See the
   node primitives below to inspect such trees.

   Unlike for contexts and units, this type has weak-reference semantics:
   keeping a reference to a node has no effect on the decision to keep the unit
   that it owns allocated. This means that once all references to the context
   and units related to a node are dropped, the context and its units are
   deallocated and the node becomes a stale reference: most operations on it
   will raise a ``Stale_Reference_Error``.

   Note that since reparsing an analysis unit deallocates all the nodes it
   contains, this operation makes all reference to these nodes stale as
   well.   */
typedef void* ada_base_node;
/* Reference to a symbol. Symbols are owned by analysis contexts, so they must
   not outlive them. This type exists only in the C API, and roughly wraps the
   corresponding Ada type (an array fat pointer).  */
typedef struct {
   void *data;
   void *bounds;
} ada_symbol_type;
typedef uint8_t ada_bool;
/* String encoded in UTF-32 (native endianness).  */
typedef struct {
   /* Address for the content of the string.  */
    uint32_t *chars;
   /* Size of the string (in characters).  */
    size_t length;

    int is_allocated;
} ada_text;
/* Arbitrarily large integer.  */
typedef void *ada_big_integer;
   typedef enum {
      ADA_ANALYSIS_UNIT_KIND_UNIT_SPECIFICATION, ADA_ANALYSIS_UNIT_KIND_UNIT_BODY
   } ada_analysis_unit_kind;
   
   typedef enum {
      ADA_REF_RESULT_KIND_NOREF, ADA_REF_RESULT_KIND_PRECISE, ADA_REF_RESULT_KIND_IMPRECISE, ADA_REF_RESULT_KIND_ERROR
   } ada_ref_result_kind;
/*
 * Array types incomplete declarations
 */



typedef struct ada_bare_ada_node_array *ada_bare_ada_node_array;
typedef struct ada_ada_node_array *ada_ada_node_array;
        

typedef struct ada_text_type *ada_text_type;
        

typedef struct ada_completion_item_array *ada_completion_item_array;
        

typedef struct ada_doc_annotation_array *ada_doc_annotation_array;
        

typedef struct ada_param_actual_array *ada_param_actual_array;
        

typedef struct ada_ref_result_array *ada_ref_result_array;
        

typedef struct ada_substitution_array *ada_substitution_array;
        

typedef struct ada_analysis_unit_array *ada_analysis_unit_array;
        

typedef struct ada_unbounded_text_type_array *ada_unbounded_text_type_array;
        



typedef struct {
        ada_base_node node;
        ada_internal_entity_info info;
} ada_base_entity;
        



typedef struct {
        ada_bool exists;
        ada_base_entity node;
        ada_base_entity value;
} ada_internal_aspect;
        



typedef struct {
        ada_base_entity decl;
        ada_bool is_dot_call;
} ada_internal_completion_item;
        



typedef struct {
        ada_base_entity low_bound;
        ada_base_entity high_bound;
} ada_internal_discrete_range;
        



typedef struct {
        ada_text_type key;
        ada_text_type value;
} ada_internal_doc_annotation;
    /* Increment the ref-count of all components in "r".  */
    extern void
    ada_internal_doc_annotation_inc_ref(ada_internal_doc_annotation *r);
    /* Decrement the ref-count of all components in "r".  */
    extern void
    ada_internal_doc_annotation_dec_ref(ada_internal_doc_annotation *r);
        



typedef struct {
        ada_base_entity param;
        ada_base_entity actual;
} ada_internal_param_actual;
        



typedef struct {
        ada_base_entity ref;
        ada_ref_result_kind kind;
} ada_internal_ref_result;
        



typedef struct {
        ada_base_entity decl;
        ada_ref_result_kind kind;
} ada_internal_refd_decl;
        



typedef struct {
        ada_base_entity def_name;
        ada_ref_result_kind kind;
} ada_internal_refd_def;
        



typedef struct {
        ada_base_entity from_decl;
        ada_big_integer to_value;
        ada_base_entity value_type;
} ada_internal_substitution;
    /* Increment the ref-count of all components in "r".  */
    extern void
    ada_internal_substitution_inc_ref(ada_internal_substitution *r);
    /* Decrement the ref-count of all components in "r".  */
    extern void
    ada_internal_substitution_dec_ref(ada_internal_substitution *r);
/*
 * Types for unit providers
 */

/* Interface to fetch analysis units from a name and a unit kind.

   The unit provider mechanism provides an abstraction which assumes that to
   any couple (unit name, unit kind) we can associate at most one source file.
   This means that several couples can be associated to the same source file,
   but on the other hand, only one one source file can be associated to a
   couple.

   This is used to make the semantic analysis able to switch from one analysis
   units to another.  */
typedef void *ada_unit_provider;
/* Callback type for functions that are called when destroying a unit file
   provider type.  */
typedef void (*ada_unit_provider_destroy_callback)(void *data);
/* Callback type for functions that are called to turn a unit reference encoded
   as a unit name into an analysis unit.  */
typedef char *(*ada_unit_provider_get_unit_filename_callback)(
   void *data,
   ada_text *name,
   ada_analysis_unit_kind kind
);
/* Callback type for functions that are called to turn a unit reference encoded
   as a unit name into an analysis unit.  */
typedef ada_analysis_unit (*ada_unit_provider_get_unit_from_name_callback)(
   void *data,
   ada_analysis_context context,
   ada_text *name,
   ada_analysis_unit_kind kind,
   const char *charset,
   int reparse
);
/* All the functions below can potentially raise an exception, so
   ada_get_last_exception must be checked after them even
   before trying to use the returned value.  */


/*
 * Array types declarations
 */






struct ada_bare_ada_node_array {
   int n;
   int ref_count;
   ada_base_node items[1];
};
/* Create a length-sized array.  */
extern ada_bare_ada_node_array
ada_bare_ada_node_array_create(int length);
/* Increment the ref-count for "a".  */
extern void
ada_bare_ada_node_array_inc_ref(ada_bare_ada_node_array a);
/* Decrement the ref-count for "a". This deallocates it if the ref-count drops
   to 0.  */
extern void
ada_bare_ada_node_array_dec_ref(ada_bare_ada_node_array a);
struct ada_ada_node_array {
   int n;
   int ref_count;
   ada_base_entity items[1];
};
/* Create a length-sized array.  */
extern ada_ada_node_array
ada_ada_node_array_create(int length);
/* Increment the ref-count for "a".  */
extern void
ada_ada_node_array_inc_ref(ada_ada_node_array a);
/* Decrement the ref-count for "a". This deallocates it if the ref-count drops
   to 0.  */
extern void
ada_ada_node_array_dec_ref(ada_ada_node_array a);
        




struct ada_text_type {
   int n;
   int ref_count;
   uint32_t items[1];
};
/* Create a length-sized array.  */
extern ada_text_type
ada_text_type_create(int length);
/* Increment the ref-count for "a".  */
extern void
ada_text_type_inc_ref(ada_text_type a);
/* Decrement the ref-count for "a". This deallocates it if the ref-count drops
   to 0.  */
extern void
ada_text_type_dec_ref(ada_text_type a);
        




struct ada_completion_item_array {
   int n;
   int ref_count;
   ada_internal_completion_item items[1];
};
/* Create a length-sized array.  */
extern ada_completion_item_array
ada_completion_item_array_create(int length);
/* Increment the ref-count for "a".  */
extern void
ada_completion_item_array_inc_ref(ada_completion_item_array a);
/* Decrement the ref-count for "a". This deallocates it if the ref-count drops
   to 0.  */
extern void
ada_completion_item_array_dec_ref(ada_completion_item_array a);
        




struct ada_doc_annotation_array {
   int n;
   int ref_count;
   ada_internal_doc_annotation items[1];
};
/* Create a length-sized array.  */
extern ada_doc_annotation_array
ada_doc_annotation_array_create(int length);
/* Increment the ref-count for "a".  */
extern void
ada_doc_annotation_array_inc_ref(ada_doc_annotation_array a);
/* Decrement the ref-count for "a". This deallocates it if the ref-count drops
   to 0.  */
extern void
ada_doc_annotation_array_dec_ref(ada_doc_annotation_array a);
        




struct ada_param_actual_array {
   int n;
   int ref_count;
   ada_internal_param_actual items[1];
};
/* Create a length-sized array.  */
extern ada_param_actual_array
ada_param_actual_array_create(int length);
/* Increment the ref-count for "a".  */
extern void
ada_param_actual_array_inc_ref(ada_param_actual_array a);
/* Decrement the ref-count for "a". This deallocates it if the ref-count drops
   to 0.  */
extern void
ada_param_actual_array_dec_ref(ada_param_actual_array a);
        




struct ada_ref_result_array {
   int n;
   int ref_count;
   ada_internal_ref_result items[1];
};
/* Create a length-sized array.  */
extern ada_ref_result_array
ada_ref_result_array_create(int length);
/* Increment the ref-count for "a".  */
extern void
ada_ref_result_array_inc_ref(ada_ref_result_array a);
/* Decrement the ref-count for "a". This deallocates it if the ref-count drops
   to 0.  */
extern void
ada_ref_result_array_dec_ref(ada_ref_result_array a);
        




struct ada_substitution_array {
   int n;
   int ref_count;
   ada_internal_substitution items[1];
};
/* Create a length-sized array.  */
extern ada_substitution_array
ada_substitution_array_create(int length);
/* Increment the ref-count for "a".  */
extern void
ada_substitution_array_inc_ref(ada_substitution_array a);
/* Decrement the ref-count for "a". This deallocates it if the ref-count drops
   to 0.  */
extern void
ada_substitution_array_dec_ref(ada_substitution_array a);
        




struct ada_analysis_unit_array {
   int n;
   int ref_count;
   ada_analysis_unit items[1];
};
/* Create a length-sized array.  */
extern ada_analysis_unit_array
ada_analysis_unit_array_create(int length);
/* Increment the ref-count for "a".  */
extern void
ada_analysis_unit_array_inc_ref(ada_analysis_unit_array a);
/* Decrement the ref-count for "a". This deallocates it if the ref-count drops
   to 0.  */
extern void
ada_analysis_unit_array_dec_ref(ada_analysis_unit_array a);
        




struct ada_unbounded_text_type_array {
   int n;
   int ref_count;
   ada_symbol_type items[1];
};
/* Return the Nth child for in this node's fields and store it into *CHILD_P.
   Return zero on failure (when N is too big).  */
extern int
ada_node_child(ada_base_entity *node,
                               unsigned n,
                               ada_base_entity* child_p);
/* Encode some text using the current locale. The result is dynamically
   allocated: it is up to the caller to free it when done with it.

   This is a development helper to make it quick and easy to print token and
   diagnostic text: it ignores errors (when the locale does not support some
   characters). Production code should use real conversion routines such as
   libiconv's in order to deal with UTF-32 texts.  */
extern char *
ada_text_to_locale_string(ada_text *text);
/*
 * Unit providers
 */

/* Create a unit provider. When done with it, the result must be passed to
   ``ada_destroy_unit_provider``.

   Pass as ``data`` a pointer to hold your private data: it will be passed to
   all callbacks below.

   ``destroy`` is a callback that is called by ``ada_destroy_unit_provider`` to
   leave a chance to free resources that ``data`` may hold.

   ``get_unit_from_node`` is a callback. It turns an analysis unit reference
   represented as a node into an analysis unit. It should return ``NULL`` if
   the node is not a valid unit name representation.

   ``get_unit_from_name`` is a callback similar to ``get_unit_from_node``
   except it takes an analysis unit reference represented as a string.  */
extern ada_unit_provider
ada_create_unit_provider(
   void *data,
   ada_unit_provider_destroy_callback destroy_func,
   ada_unit_provider_get_unit_filename_callback get_unit_filename_func,
   ada_unit_provider_get_unit_from_name_callback get_unit_from_name_func
);
/* Release an ownership share for this unit provider. This destroys the unit
   provider if there are no shares left.  */
extern void
ada_dec_ref_unit_provider(void *data);