frontend/virtual/Include/libadalang/libadalang-implementation-c.ads


   function ada_node_child
     (Node : ada_base_entity_Ptr; N : unsigned; Child_P : ada_base_entity_Ptr)
      return int with
      Export        => True,
      Convention    => C,
      External_Name => "ada_node_child";
      --  Return the Nth child for in this node's fields and store it into
      --  *CHILD_P. Return zero on failure (when N is too big).

   function ada_text_to_locale_string
     (Text : ada_text) return System.Address with
      Export        => True,
      Convention    => C,
      External_Name => "ada_text_to_locale_string";
      --  Encode some text using the current locale. The result is dynamically
      --  allocated: it is up to the caller to free it when done with it.
      --
      --  This is a development helper to make it quick and easy to print token
      --  and diagnostic text: it ignores errors (when the locale does not
      --  support some characters). Production code should use real conversion
      --  routines such as libiconv's in order to deal with UTF-32 texts.

   subtype ada_bare_ada_node_array is Bare_Ada_Node_Array_Access;
   type ada_bare_ada_node_array_Ptr is access Bare_Ada_Node_Array_Access;

   function ada_bare_ada_node_array_create
     (Length : int) return Bare_Ada_Node_Array_Access with
      Export        => True,
      Convention    => C,
      External_Name => "ada_bare_ada_node_array_create";

   procedure ada_bare_ada_node_array_inc_ref
     (A : Bare_Ada_Node_Array_Access) with
      Export        => True,
      Convention    => C,
      External_Name => "ada_bare_ada_node_array_inc_ref";

   procedure ada_bare_ada_node_array_dec_ref
     (A : Bare_Ada_Node_Array_Access) with
      Export        => True,
      Convention    => C,
      External_Name => "ada_bare_ada_node_array_dec_ref";

   subtype ada_ada_node_array is Internal_Entity_Array_Access;
   type ada_ada_node_array_Ptr is access Internal_Entity_Array_Access;

   function ada_ada_node_array_create
     (Length : int) return Internal_Entity_Array_Access with
      Export        => True,
      Convention    => C,
      External_Name => "ada_ada_node_array_create";

   procedure ada_ada_node_array_inc_ref (A : Internal_Entity_Array_Access) with
      Export        => True,
      Convention    => C,
      External_Name => "ada_ada_node_array_inc_ref";

   procedure ada_ada_node_array_dec_ref (A : Internal_Entity_Array_Access) with
      Export        => True,
      Convention    => C,
      External_Name => "ada_ada_node_array_dec_ref";

      --------------------
      -- Unit providers --
      --------------------

   function ada_create_unit_provider
     (Data : System.Address; Destroy_Func : ada_unit_provider_destroy_callback;
      Get_Unit_Filename_Func  : ada_unit_provider_get_unit_filename_callback;
      Get_Unit_From_Name_Func : ada_unit_provider_get_unit_from_name_callback)
      return ada_unit_provider with
      Export        => True,
      Convention    => C,
      External_Name => "ada_create_unit_provider";
      --  Create a unit provider. When done with it, the result must be passed
      --  to ``ada_destroy_unit_provider``.
      --
      --  Pass as ``data`` a pointer to hold your private data: it will be
      --  passed to all callbacks below.
      --
      --  ``destroy`` is a callback that is called by
      --  ``ada_destroy_unit_provider`` to leave a chance to free
      --  resources that ``data`` may hold.
      --
      --  ``get_unit_from_node`` is a callback. It turns an analysis unit
      --  reference represented as a node into an analysis unit. It should
      --  return ``NULL`` if the node is not a valid unit name representation.
      --
      --  ``get_unit_from_name`` is a callback similar to
      --  ``get_unit_from_node`` except it takes an analysis unit
      --  reference represented as a string.

   procedure ada_dec_ref_unit_provider (Provider : ada_unit_provider) with
      Export        => True,
      Convention    => C,
      External_Name => "ada_dec_ref_unit_provider";
      --  Release an ownership share for this unit provider. This destroys the
      --  unit provider if there are no shares left.

      ------------------
      -- Struct types --
      ------------------

   subtype ada_internal_aspect is Internal_Aspect;
   type ada_internal_aspect_Ptr is access Internal_Aspect;

   subtype ada_internal_completion_item is Internal_Completion_Item;
   type ada_internal_completion_item_Ptr is access Internal_Completion_Item;

   subtype ada_internal_discrete_range is Internal_Discrete_Range;
   type ada_internal_discrete_range_Ptr is access Internal_Discrete_Range;

   subtype ada_internal_doc_annotation is Internal_Doc_Annotation;
   type ada_internal_doc_annotation_Ptr is access Internal_Doc_Annotation;

   procedure ada_internal_doc_annotation_inc_ref
     (R : ada_internal_doc_annotation_Ptr) with
      Export        => True,
      Convention    => C,
      External_Name => "ada_internal_doc_annotation_inc_ref";
   procedure ada_internal_doc_annotation_dec_ref
     (R : ada_internal_doc_annotation_Ptr) with
      Export        => True,
      Convention    => C,
      External_Name => "ada_internal_doc_annotation_dec_ref";

   subtype ada_internal_param_actual is Internal_Param_Actual;
   type ada_internal_param_actual_Ptr is access Internal_Param_Actual;

   subtype ada_internal_ref_result is Internal_Ref_Result;
   type ada_internal_ref_result_Ptr is access Internal_Ref_Result;

   subtype ada_internal_refd_decl is Internal_Refd_Decl;
   type ada_internal_refd_decl_Ptr is access Internal_Refd_Decl;

   subtype ada_internal_refd_def is Internal_Refd_Def;
   type ada_internal_refd_def_Ptr is access Internal_Refd_Def;

   subtype ada_internal_substitution is Internal_Substitution;
   type ada_internal_substitution_Ptr is access Internal_Substitution;

   procedure ada_internal_substitution_inc_ref
     (R : ada_internal_substitution_Ptr) with
      Export        => True,
      Convention    => C,
      External_Name => "ada_internal_substitution_inc_ref";
   procedure ada_internal_substitution_dec_ref
     (R : ada_internal_substitution_Ptr) with
      Export        => True,
      Convention    => C,
      External_Name => "ada_internal_substitution_dec_ref";

      -----------------
      -- Array types --
      -----------------

   subtype ada_text_type is Character_Type_Array_Access;
   type ada_text_type_Ptr is access Character_Type_Array_Access;

   function ada_text_type_create
     (Length : int) return Character_Type_Array_Access with
      Export        => True,
      Convention    => C,
      External_Name => "ada_text_type_create";

   procedure ada_text_type_inc_ref (A : Character_Type_Array_Access) with
      Export        => True,
      Convention    => C,
      External_Name => "ada_text_type_inc_ref";

   procedure ada_text_type_dec_ref (A : Character_Type_Array_Access) with
      Export        => True,
      Convention    => C,
      External_Name => "ada_text_type_dec_ref";

   subtype ada_completion_item_array is Internal_Completion_Item_Array_Access;
   type ada_completion_item_array_Ptr is
     access Internal_Completion_Item_Array_Access;

   function ada_completion_item_array_create
     (Length : int) return Internal_Completion_Item_Array_Access with
      Export        => True,
      Convention    => C,
      External_Name => "ada_completion_item_array_create";

   procedure ada_completion_item_array_inc_ref
     (A : Internal_Completion_Item_Array_Access) with
      Export        => True,
      Convention    => C,
      External_Name => "ada_completion_item_array_inc_ref";

   procedure ada_completion_item_array_dec_ref
     (A : Internal_Completion_Item_Array_Access) with
      Export        => True,
      Convention    => C,
      External_Name => "ada_completion_item_array_dec_ref";

   subtype ada_doc_annotation_array is Internal_Doc_Annotation_Array_Access;
   type ada_doc_annotation_array_Ptr is
     access Internal_Doc_Annotation_Array_Access;

   function ada_doc_annotation_array_create
     (Length : int) return Internal_Doc_Annotation_Array_Access with
      Export        => True,
      Convention    => C,
      External_Name => "ada_doc_annotation_array_create";

   procedure ada_doc_annotation_array_inc_ref
     (A : Internal_Doc_Annotation_Array_Access) with
      Export        => True,
      Convention    => C,
      External_Name => "ada_doc_annotation_array_inc_ref";

   procedure ada_doc_annotation_array_dec_ref
     (A : Internal_Doc_Annotation_Array_Access) with
      Export        => True,
      Convention    => C,
      External_Name => "ada_doc_annotation_array_dec_ref";

   subtype ada_param_actual_array is Internal_Param_Actual_Array_Access;
   type ada_param_actual_array_Ptr is
     access Internal_Param_Actual_Array_Access;

   function ada_param_actual_array_create
     (Length : int) return Internal_Param_Actual_Array_Access with
      Export        => True,
      Convention    => C,
      External_Name => "ada_param_actual_array_create";

   procedure ada_param_actual_array_inc_ref
     (A : Internal_Param_Actual_Array_Access) with
      Export        => True,
      Convention    => C,
      External_Name => "ada_param_actual_array_inc_ref";

   procedure ada_param_actual_array_dec_ref
     (A : Internal_Param_Actual_Array_Access) with
      Export        => True,
      Convention    => C,
      External_Name => "ada_param_actual_array_dec_ref";

   subtype ada_ref_result_array is Internal_Ref_Result_Array_Access;
   type ada_ref_result_array_Ptr is access Internal_Ref_Result_Array_Access;

   function ada_ref_result_array_create
     (Length : int) return Internal_Ref_Result_Array_Access with
      Export        => True,
      Convention    => C,
      External_Name => "ada_ref_result_array_create";

   procedure ada_ref_result_array_inc_ref
     (A : Internal_Ref_Result_Array_Access) with
      Export        => True,
      Convention    => C,
      External_Name => "ada_ref_result_array_inc_ref";

   procedure ada_ref_result_array_dec_ref
     (A : Internal_Ref_Result_Array_Access) with
      Export        => True,
      Convention    => C,
      External_Name => "ada_ref_result_array_dec_ref";

   subtype ada_substitution_array is Internal_Substitution_Array_Access;
   type ada_substitution_array_Ptr is
     access Internal_Substitution_Array_Access;

   function ada_substitution_array_create
     (Length : int) return Internal_Substitution_Array_Access with
      Export        => True,
      Convention    => C,
      External_Name => "ada_substitution_array_create";

   procedure ada_substitution_array_inc_ref
     (A : Internal_Substitution_Array_Access) with
      Export        => True,
      Convention    => C,
      External_Name => "ada_substitution_array_inc_ref";

   procedure ada_substitution_array_dec_ref
     (A : Internal_Substitution_Array_Access) with
      Export        => True,
      Convention    => C,
      External_Name => "ada_substitution_array_dec_ref";

   subtype ada_analysis_unit_array is Internal_Unit_Array_Access;
   type ada_analysis_unit_array_Ptr is access Internal_Unit_Array_Access;

   function ada_analysis_unit_array_create
     (Length : int) return Internal_Unit_Array_Access with
      Export        => True,
      Convention    => C,
      External_Name => "ada_analysis_unit_array_create";

   procedure ada_analysis_unit_array_inc_ref
     (A : Internal_Unit_Array_Access) with
      Export        => True,
      Convention    => C,
      External_Name => "ada_analysis_unit_array_inc_ref";

   procedure ada_analysis_unit_array_dec_ref
     (A : Internal_Unit_Array_Access) with
      Export        => True,
      Convention    => C,
      External_Name => "ada_analysis_unit_array_dec_ref";

   subtype ada_unbounded_text_type_array is Symbol_Type_Array_Access;
   type ada_unbounded_text_type_array_Ptr is access Symbol_Type_Array_Access;
